Fix layout on mobile.

--- a/client/src/app/thermo/thermo.component.scss
+++ b/client/src/app/thermo/thermo.component.scss
@@ -6,11 +6,7 @@
 }
 
 .thermo-house--component {
-	height: 100%;
-}
-
-.thermo-house--component {
-	padding-bottom: 10px;
+	height: calc(100% - 10px);
 }
 
 .thermo-house--icon {
